--- a/Web/index.html
+++ b/Web/index.html
@@ -29,10 +29,10 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Web.asm.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web.data.gz",
-        frameworkUrl: buildUrl + "/Web.asm.framework.js.gz",
-        codeUrl: buildUrl + "/Web.asm.js.gz",
-        memoryUrl: buildUrl + "/Web.asm.mem.gz",
+        dataUrl: buildUrl + "/Web.data",
+        frameworkUrl: buildUrl + "/Web.asm.framework.js",
+        codeUrl: buildUrl + "/Web.asm.js",
+        memoryUrl: buildUrl + "/Web.asm.mem",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Space SHMUP Practice",
